--- a/EasyAdapter/src/main/res/layout/wong_recycle_item_foot_h.xml
+++ b/EasyAdapter/src/main/res/layout/wong_recycle_item_foot_h.xml
@@ -23,6 +23,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
+            android:adjustViewBounds="true"
             app:lottie_autoPlay="false"
             app:lottie_loop="true" />
 
@@ -33,7 +34,6 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/lottie_loading"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="-10dp"
             android:ems="1"
             android:maxEms="1"
             android:text="加载中"
@@ -104,6 +104,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
+            android:adjustViewBounds="true"
             app:lottie_autoPlay="false"
             app:lottie_loop="false" />
 
@@ -137,6 +138,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
+            android:adjustViewBounds="true"
             app:lottie_autoPlay="false"
             app:lottie_loop="false" />
 
