--- a/app/src/main/res/layout/activity_grid_horizontal.xml
+++ b/app/src/main/res/layout/activity_grid_horizontal.xml
@@ -9,7 +9,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="400dp"
         android:background="#00BCD4" />
 
 </LinearLayout>
