--- a/app/src/main/res/layout/item_horizontal.xml
+++ b/app/src/main/res/layout/item_horizontal.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
-    android:layout_height="match_parent"
+    android:layout_height="110dp"
     android:background="#FF9800"
     android:orientation="vertical">
 
@@ -16,9 +16,11 @@
     <TextView
         android:id="@+id/tv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="25dp"
         android:layout_gravity="center_vertical"
         android:layout_margin="5dp"
+        android:ellipsize="end"
+        android:lines="1"
         android:textSize="16dp"
         tools:text="我是Item" />
 
