--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,4 +30,10 @@
         android:onClick="gridManager_horizontal"
         android:text="水平网格" />
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:onClick="staggeredGridManager_vertical"
+        android:text="垂直瀑布流" />
+
 </LinearLayout>
